# sparse-solvers

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  CMakeSettings.json  README.md  TODO.txt
bindings/python/: CMakeLists.txt  MANIFEST.in  README.in  README.md.in  README.rst.in  setup.py.in
bindings/python/reference/: common.py  homotopy.py  homotopy_simple.py  irls.py  main.py  read_matrix_signal.py  sparse_results.py  suffixes.py  update_inverse_columns.py
bindings/python/sparsesolvers/: __init__.py  binding.cpp  binding_test.py
bindings/python/tests/: test_binding.py
cmake/: BlasUtils.cmake  FileCopyTargets.cmake
docs/algorithms/homotopy-method/: src.tex
docs/algorithms/irls-method/: src.tex
docs/algorithms/online-matrix-inverse/: src.tex
include/ss/: fwd.h  ndspan.h  policies.h  ss.h  ss_config.h.in
src/: blas_prelude.h  blas_wrapper.h  lib.cpp  lib_config.h.in  lib_test.cpp
src/linalg/: blas_prelude.h  blas_wrapper.cpp  blas_wrapper.h  cholesky_decomposition.h  cholesky_decomposition_bench.cpp  cholesky_decomposition_test.cpp  common.h  norms.h  norms_test.cpp  online_inverse.h  online_inverse_test.cpp  qr_decomposition.h  qr_decomposition_bench.cpp  qr_decomposition_test.cpp  rank_index.h  rank_index_test.cpp
src/solvers/: homotopy-cpu.cpp  homotopy.h  homotopy_bench.cpp  homotopy_test.cpp  irlq-cpu.cpp  irlq.h  irls-cpu.cpp  irls.h  irls_test.cpp  test_util.h
test/: CMakeLists.txt  homotopy_test.cpp  lib_test.cpp
